[2.0.9]
- Reduced the memory use of database building with taxonomy mapping.
- Reduced the memory use of the seed hit sorting stage.
- Improved the consitency of results when running in query-indexed mode (`--algo 1`).

[2.0.8]
- Added support for using BLAST database files instead of the Diamond-formatted
  `.dmnd` files.
- Added the option `--seqidlist` to filter the database by sequence accession (only
  supported for BLAST databases).
- Fixed a bug that caused the `--dbsize` option not to function correctly.
- Added the command `makeidx` and the option `--target-indexed` that provide an
  optimisation specialized for small databases (<10 Mb).
- Added the option `--mp-recover` to recover aborted runs in multiprocessing mode.

[2.0.7]
- Added support for computing full-matrix instead of banded Smith Waterman extensions
  (command line option `--ext full`).
- Added support for the new `prot.accession2taxid.FULL.gz` taxonomy mapping file from
  NCBI.
- Added the option `--gapped-filter-evalue` to set the e-value threshold of the gapped
  filter heuristic.
- Added setting the scores of the mask letter according to BLAST rules when a
  compositionally adjusted matrix is used.
- Changed formatting of e-values to print two decimals instead of one.
- Added the output field `qseq_translated` to print the translation of the aligned part
  of the query sequence.
- Added support for providing two input files to `--query/-q` when running alignment
  in blastx mode.
- Added the output field `full_qseq_mate` to print the sequence of the query's mate
  (enabled when using two query files in blastx mode).
- Fixed a bug that could cause a crash in blastx mode for very long queries.

[2.0.6]
- Changed the computation of expected values to use the method described in Park, Y.,
  Sheetlin, S., Ma, N. et al. New finite-size correction for local alignment score
  distributions. *BMC Res Notes* **5**, 286 (2012).